clusters/vollminlab-cluster/dmz/minecraft/app/bluemap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-bluemap
  namespace: dmz
  labels:
    app: minecraft
    env: production
    category: gaming
spec:
  type: NodePort
  ports:
    - name: bluemap
      port: 8123
      targetPort: 8100
      protocol: TCP
      nodePort: 32566
  selector:
    app: minecraft
  externalTrafficPolicy: Local
